differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr82285.c-4.8.2-2.out.txt
pr82285.c: In function ‘main’:
pr82285.c:10:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (unsigned i = 0; i < 16; i++)
   ^
pr82285.c:10:3: note: use option -std=c99 or -std=gnu99 to compile your code
